app/globals.css
/* ... */
.guest-list-inner {
  margin: 4px 0 0 0;
  padding: 4px;
  background-color: #f1f1f1;
  border-radius: 4px;
  height: fit-content;
  opacity: 1;
  transition: .2s ease-in-out;
}

.guest-list--hidden {
  line-height: 0px;
  overflow: hidden;
  max-height: 0;
  opacity: 0;
  transition: .2s ease-in-out;
}

.list__names{
  padding: 4px 8px;
  font-size: 14px;
  max-height: 320px;
  overflow: auto;
  border: 1px solid #ccc;
  border-radius: 4px;
}

.guest-restrictions {
  display: none;
  background-color: #fff;
  padding: 0 8px;
  margin-bottom: 4px;
  border-radius: 4px;
  opacity: 0;
  height: 0;
  transition: .2s;
}

.guest-restrictions--selected {
  background-color: #fff;
  padding: 0 8px;
  margin-bottom: 4px;
  border-radius: 4px;
  opacity: 1;
  height: 1;
  display: block;
  transition: .2s;
}

.restriction-alert {
  border-radius: 4px;
  font-weight: bold;
  padding: 2px;
  color: #Ef4b4c;
  font-size: 12px;
}

.restriction-alert:hover {
  color: #f99494;
  cursor: pointer;
}

.restriction-alert-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.answer-invite-buttons {
  display: flex;
  justify-content: center;
  margin: 16px;
}

.description-hidden {
  height: 0;
  overflow: hidden;
  transition: .2s ease-in-out;
}
.description-visible {
  min-height: 20px;
  transition: .2s ease-in-out;
}


/*______________________________________  */

/*______________________________________ MODS */
.--centered-text {
  text-align: center;
}

.--width60px {
  width: 60px;
}

.--gray-shading {
  background-color: #f1f1f1;
  border-bottom: 1px solid #ccc;
}

.--gray-shading-line {
  background-color: #fff;
  border: 1px solid #ccc;
  border-bottom: 2px solid #ccc;
  border-left: 6px solid #ccc;
}

.--grey-text {
  color: #ccc;
  margin: 0;
  line-height: 12px;
}

.--with-margin-t-8px {
  margin-top: 8px;
}

.--with-margin-n-8px {
  margin-bottom: 8px;
}

.--marginB16px {
  margin-top: 32px;
  margin-left: 16px;
  margin-bottom: 16px;
}

.--bold{
  font-weight: bold;
}

.--bold-gray {
  font-weight: bold;
  margin: 0 8px 0 0;
  color: #cccccc;
}

.--red-highlight-text {
  color: #Ef4b4c
}

.--text12px {
  font-size: 12px;
}

.--text20px{
  font-size: 20px;
}

.--inline-tags {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  width: 100%;
}

.--spacer-20px {
  height: 20px;
}

.--spacer-60px {
  height: 60px;
}

.--flec-collumn {
  display: flex;
  flex-direction: column;
}

.--roundtrip-symbol {
  position: absolute;
  left: 2px;
  border-right: 1px solid #ccc;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 8px;;
}

.--oneway-symbol {
  position: absolute;
  left: 0px;
  border-right: 1px solid #ccc;
  height: 100%;
  display: flex;
  align-items: center;
  padding: 6px;
}

.--gap8px {
  display: flex;
  gap: 8px;
}

.--margin-left4px{
  margin-left: 4px ;
}

.--margin-ltr16px{
  margin: 16px 16px 0 16px;
}

.--padding-left8px {
  padding-left: 8px;
}

.--margin12px {
  margin: 12px;
}

.--maringRL {
  margin: 0 4px 0 12px;
}

.--padding-right8px {
  padding-right: 8px;
}

.--pointer-hover:hover {
  cursor: pointer;
  background-color: #fff;
  border-radius: 4px;
} 

.--position-relative {
  position: relative;
}
/* ______________________________________ */

/* ______________________________________ DIVIDERS */
.--tiny-dots {
  border-top: dotted 5px #ccc;
  width: 5px
}

.--small-dots {
  border-top: dotted 10px #ccc;
  width: 10px
}

.--medium-dots {
  border-top: dotted 15px #ccc;
  width: 15px
}

.--big-dots {
  border-top: dotted 20px #ccc;
  width: 20px
}

.--red-bar-divider {
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  width: 160px;
  margin: 20px auto 36px auto;
}

.easter-egg {
  display: flex;
  flex-direction: column;
  text-align: center;
  justify-content: center;
  align-items: center;
  text-align: center;
  font-size: 20px;
  margin: 40px 10px 10px 10px;
}

/*______________________________________*/

/*__________________________ LOADING SUSPENSE */

.loader-demo-box {
  border-radius: 0.25rem !important;
}

.loader-demo-box {
  width: 100%;
  height: 200px;
}

.jumping-dots-loader {
  width: 100px;
  height: 100px;
  border-radius: 100%;
  position: relative;
  margin: 0 auto;
  margin-top: 200px;
}

.jumping-dots-loader span {
  display: inline-block;
  width: 20px;
  height: 20px;
  border-radius: 100%;
  background-color: rgba(241, 83, 110, 0.8);
  margin: 35px 5px;
}

.jumping-dots-loader span:nth-child(1) {
  animation: bounce 1s ease-in-out infinite;
}

.jumping-dots-loader span:nth-child(2) {
  animation: bounce 1s ease-in-out 0.33s infinite;
}

.jumping-dots-loader span:nth-child(3) {
  animation: bounce 1s ease-in-out 0.66s infinite;
}

@keyframes bounce {
  0%,
  75%,
  100% {
    -webkit-transform: translateY(0);
    -ms-transform: translateY(0);
    -o-transform: translateY(0);
    transform: translateY(0);
  }

  25% {
    -webkit-transform: translateY(-20px);
    -ms-transform: translateY(-20px);
    -o-transform: translateY(-20px);
    transform: translateY(-20px);
  }
}

/*______________________________________*/

/*__________________________ LOADING UI */
.loading-ui {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.line{
  margin-top: 15px;
  height: 20px;
  width: 100px;
  border-radius: 4px;
}

.line1{
  width: 100px;
  margin-top: 0;
}

.line5{
  width: 160px;
}

.loading-animation{
  overflow: hidden;
  background: #eee;
}

.loading-animation::before{
  content: "";
  display: block;
  height: 100%;
  width: 100%;
  animation: loading 1s infinite;
  background: linear-gradient(to right, transparent,#ddd,transparent);
}

@keyframes loading {
  0%{
      transform: translateX(-100%);
  }
  100%{
      transform: translateX(100%);
  }
}
/* ... */

